--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="header">
     <h1>Social Media <span class="x">10X</span> with AI</h1>
     <img src="illustration-five-stars.webp" alt="Five Star Rating">
-    <p>Over 4,000 5-star reviews</p>
+    <p>Over 4,000 5star reviews</p>
     </div>
   <div class="social-media-schedule">
 <h1>Schedule to social media</h1>
